﻿
0.8.0-DEV3 (18th of August 2023)
----------------------------------------------------------
Note: DEV test versions have separate log, showing changes from one test to other. Release will contain all the changes

Code
----------------------------------------------------------
- MageWithAcces restriction description fixed

Content
-----------------------------------------------------------
- Fixed the issue with two nationwide filters called "golem". Now they have separate names
- Invisibility filter for mages fixed?
- Yazad&Daeva RPcost down from 40-50 to 16, for similar reasons as nagas. But Caelians are messed so bugs expected now, since i tried to fix them

=============================
0.8.0-DEV2 (31th of July 2023)
----------------------------------------------------------
Note: DEV test versions have separate log, showing changes from one test to other. Release will contain all the changes

Code
----------------------------------------------------------
- Program now generates preview sites for every montag unit and commander
- Support for terrain recruitment. Via unit "specrec" tag and its args. (see some docs or commit descr)
- As i opened this project as git in eclipse i found new stuff. So project is renamed to Nationgen-N (from 0.5.0.09E whatever) and JavaSE-18 removed from classpath
- Program now shows average amount of fails and average generation time for one nation
- RP cost section in unit.java is now kinda messed, but now provides custom cost for mounted units

Content
-----------------------------------------------------------
- Wolf, ghost, ghoul, imp summoning sites made 6 times more powerful (summon 6 monsters instead of 1)
- Added elemental summoning sites which summons 3 small elementals at a time, and one that summons 4 different small elementals
- Naga basic units got RPcost cheaper from ~44 to ~19, as they are main population and shouldnt be treated like rare sacreds of patala